# ros_astra_camera

./: .gitignore  .gitmodules  CMakeLists.txt  astra_nodelets.xml  package.xml
cfg/: Astra.cfg
include/astra_camera/: astra_device.h  astra_device_type.h  astra_driver.h  constants.h  ob_camera_node.h  ob_camera_node_factory.h
ros/: astra_camera_node.cpp  astra_camera_nodelet.cpp
src/: astra_camera_nodelet.cpp  astra_device.cpp  astra_device_manager.cpp  astra_device_type.cpp  astra_driver.cpp  list_devices.cpp  list_devices_node.cpp  ob_camera_info.cpp  ob_camera_node.cpp  ob_camera_node_factory.cpp  ob_context.cpp  ros_service.cpp  uvc_camera_driver.cpp
srv/: GetUri.srv
